cfn/template.json
{
  "AWSTemplateFormatVersion":"2010-09-09",
  "Description": "Cross Region Scalable, ECS Cloud Formation Template",
  "Metadata": {
    "Author": {"Name": "J Cole Morrison"}
  },
  "Parameters": {
    "WebTaskImage": {
      "Type": "String",
      "Description": "Url of the Docker Image to deploy"
    },
    "VpcId": {
      "Type":"AWS::EC2::VPC::Id",
      "Description":"Select a VPC that allows instances to access the Internet."
    },
    "BastionSecurityGroup": {
      "Type": "AWS::EC2::SecurityGroup::Id",
      "Description": "Security Group ID of our Bastion Server"
    },
    "SubnetIDs":{
      "Type":"List<AWS::EC2::Subnet::Id>",
      "Description":"Select at least two subnets in your selected VPC."
    }
  },
  "Mappings": {
    "AWSRegionECSAMI":{
      "us-east-1": { "ID" : "ami-275ffe31" },
      "us-east-2": { "ID" : "ami-62745007" },
      "us-west-1": { "ID" : "ami-689bc208" },
      "us-west-2": { "ID" : "ami-62d35c02" },
      "eu-west-1": { "ID" : "ami-95f8d2f3" },
      "eu-west-2": { "ID" : "ami-bf9481db" },
      "eu-central-1": { "ID" : "ami-085e8a67" },
      "ap-northeast-1": { "ID" : "ami-f63f6f91" },
      "ap-southeast-1": { "ID" : "ami-b4ae1dd7" },
      "ap-southeast-2": { "ID" : "ami-fbe9eb98" },
      "ca-central-1": { "ID" : "ami-ee58e58a" }
    }
  },
  "Conditions": {},
  "Resources": {
    "WebCluster": {
      "Type": "AWS::ECS::Cluster"
    },
    "WebALBSecurityGroup": {
      "Type": "AWS::EC2::SecurityGroup",
      "Properties": {
        "GroupDescription": "SecurityGroup for our Web Application Load Balancer",
        "VpcId": {
          "Ref": "VpcId"
        },
        "Tags": [{
          "Key": "Name",
          "Value": "Web ALB Security Group"
        }],
        "SecurityGroupIngress": [
          {
            "IpProtocol":"tcp",
            "FromPort":"80",
            "ToPort":"80",
            "CidrIp":"0.0.0.0/0"
          }
        ]
      }
    },
    "WebInstanceSecurityGroup": {
      "Type": "AWS::EC2::SecurityGroup",
      "Properties": {
        "GroupDescription": "SecurityGroup for our Web Instances",
        "VpcId": {
          "Ref": "VpcId"
        },
        "Tags": [{
          "Key": "Name",
          "Value": "Web Instance Security Group"
        }],
        "SecurityGroupIngress": [
          {
            "IpProtocol":"tcp",
            "FromPort":"22",
            "ToPort":"22",
            "SourceSecurityGroupId": { "Ref": "BastionSecurityGroup" }
          },
          {
            "IpProtocol":"tcp",
            "FromPort":"31000",
            "ToPort":"61000",
            "SourceSecurityGroupId": { "Ref": "WebALBSecurityGroup" }
          }
        ]
      }
    },
    "WebInstanceRole": {
      "Type": "AWS::IAM::Role",
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Effect": "Allow",
              "Principal": {
                "Service": [
                  "ec2.amazonaws.com"
                ]
              },
              "Action": [
                "sts:AssumeRole"
              ]
            }
          ]
        },
        "Policies": [
          {
            "PolicyName": "WebEcsLogs",
            "PolicyDocument": {
              "Statement": {
                "Effect": "Allow",
                "Action": [
                  "logs:CreateLogGroup",
                  "logs:DescribeLogStreams"
                ],
                "Resource": [
                  "arn:aws:logs:*:*:*"
                ]
              }
            }
          }
        ],
        "ManagedPolicyArns": [
          "arn:aws:iam::aws:policy/service-role/AmazonEC2ContainerServiceforEC2Role",
          "arn:aws:iam::aws:policy/service-role/AmazonEC2RoleforSSM"
        ]
      }
    },
    "WebServiceRole": {
      "Type": "AWS::IAM::Role",
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Effect": "Allow",
              "Principal": {
                "Service": [
                  "ecs.amazonaws.com"
                ]
              },
              "Action": [
                "sts:AssumeRole"
              ]
            }
          ]
        },
        "ManagedPolicyArns": [
          "arn:aws:iam::aws:policy/service-role/AmazonEC2ContainerServiceRole"
        ]
      }
    },
    "WebAutoscalingRole": {
      "Type": "AWS::IAM::Role",
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Effect": "Allow",
              "Principal": {
                "Service": [
                  "application-autoscaling.amazonaws.com"
                ]
              },
              "Action": [
                "sts:AssumeRole"
              ]
            }
          ]
        },
        "ManagedPolicyArns": [
          "arn:aws:iam::aws:policy/service-role/AmazonEC2ContainerServiceAutoscaleRole"
        ]
      }
    },
    "WebALB": {
      "Type":"AWS::ElasticLoadBalancingV2::LoadBalancer",
      "Properties":{
        "Name":"vpcity-web-alb",
        "Scheme":"internet-facing",
        "LoadBalancerAttributes":[
          {
            "Key":"idle_timeout.timeout_seconds",
            "Value":"60"
          }
        ],
        "SecurityGroups":[
          {
            "Ref":"WebALBSecurityGroup"
          }
        ],
        "Subnets": {
          "Ref": "SubnetIDs"
        }
      }
    },
    "WebALBListener": {
      "Type":"AWS::ElasticLoadBalancingV2::Listener",
      "Properties":{
        "LoadBalancerArn":{
          "Ref":"WebALB"
        },
        "Port":"80",
        "Protocol":"HTTP",
        "DefaultActions":[
          {
            "Type":"forward",
            "TargetGroupArn":{
              "Ref":"WebALBTargetGroup"
            }
          }
        ]
      }
    },
    "WebALBListenerRule": {
      "Type":"AWS::ElasticLoadBalancingV2::ListenerRule",
      "DependsOn": "WebALBListener",
      "Properties": {
        "ListenerArn": {
          "Ref": "WebALBListener"
        },
        "Actions": [
          {
            "Type":"forward",
            "TargetGroupArn":{
              "Ref":"WebALBTargetGroup"
            }
          }
        ],
        "Conditions": [
          {
            "Field": "path-pattern",
            "Values": [
              "/"
            ]
          }
        ],
        "Priority": 1
      }
    },
    "WebALBTargetGroup": {
      "Type":"AWS::ElasticLoadBalancingV2::TargetGroup",
      "DependsOn": "WebALB",
      "Properties": {
        "HealthCheckPath":"/health-alb",
        "HealthCheckProtocol":"HTTP",
        "HealthCheckIntervalSeconds":10,
        "HealthCheckTimeoutSeconds":5,
        "HealthyThresholdCount":2,
        "UnhealthyThresholdCount":2,
        "Port":80,
        "Protocol":"HTTP",
        "VpcId":{
          "Ref":"VpcId"
        }
      }
    }
  },
  "Outputs": {
    "EcsCluster": {
      "Description": "The name of our newly created cluster",
      "Value": {"Ref": "WebCluster"}
    }
  }
}
